<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="15dp"
        android:visibility="visible">

        <Button
            android:id="@+id/change_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change_settings"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:gravity="center|center_horizontal|center_vertical" />

        <SeekBar
            android:id="@+id/red_slider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:textSize="20sp"
            android:gravity="center|center_horizontal|center_vertical" />

        <SeekBar
            android:id="@+id/green_slider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:textSize="20sp"
            android:gravity="center|center_horizontal|center_vertical" />

        <SeekBar
            android:id="@+id/blue_slider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="20sp"
            android:gravity="center|center_horizontal|center_vertical" />

        <SeekBar
            android:id="@+id/light_slider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/close_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textSize="25sp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"/>

</LinearLayout>